# basson

./: .gitignore  LICENSE  LICENSE.BASS.md  LICENSE.basson.md  pyproject.toml  readme.md
basson/: BASS.py  __init__.py  api.py  basson.py  bassplayer.py  channel.py  header.py  music.py  record.py  stream.py  structures.py  utils.py
basson/api/: api.py  header.py  headprivate.py  structures.py  types.py
docs/: comparison_chart.md  functiontable.md  manual.md
examples/: audio_player.py  simple.py  tkplayer.py
