[project]
name = "basson"
version = "0.3.2"
authors = [
   { name="Leo 52044", email="lev.portnyagin@vk.com" },]
description = "Easy-to-use wrapper for BASS audio library"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",]

[project.urls]
Homepage = "https://github.com/52044/basson"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["basson"]